<resources>
    <string name="app_name">Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="add_a_new_student">add a new student</string>
    <string name="detail">detail</string>
    <string name="name">სახელი</string>
    <string name="phone_number">ტელეფონის ნომერი</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="lessons_in_the_week">გაკვეთილების რაოდენობა კვირაში</string>
</resources>