<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    tools:context=".screens.addStudent.AddStudentFragment">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/phone_number"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_lessons_week"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/lessons_in_the_week"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_phone_number"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="#E8C114"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="#E8C114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>